<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="createNewAccountViewModel"
            type="com.iservice.agency.ui.register.CreateNewAccountViewModel" />

        <variable name="createNewAccountActivity"
            type="com.iservice.agency.ui.register.CreateNewAccountActivity" />

        <variable
            name="createNewAccountForm"
            type="com.iservice.agency.ui.register.form.CreateNewAccountForm" />


        <import type="android.view.View" />
    </data>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical">


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <ImageView
                        android:layout_width="@dimen/_90sdp"
                        android:layout_height="@dimen/_90sdp"
                        android:contentDescription="@string/create_account_logo"
                        android:layout_gravity="center_horizontal"
                        android:src="@mipmap/ic_launcher_foreground" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/create_new_account"
                        android:id="@+id/startWithPhone"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_marginBottom="@dimen/_15sdp"
                        android:textSize="@dimen/_20ssp"
                        android:textStyle="bold"
                        android:textColor="#4E5D78"
                        android:gravity="center"/>


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:focusable="false"
                        android:clickable="false">

                        <EditText
                            android:id="@+id/firstName"
                            android:layout_width="@dimen/_130sdp"
                            android:layout_height="49dp"
                            android:autofillHints="phone"
                            android:background="@drawable/login_editext_background"
                            android:hint="@string/create_account_first_name"
                            android:inputType="textNoSuggestions"
                            android:paddingStart="@dimen/_7sdp"
                            android:paddingEnd="@dimen/_7sdp"
                            android:imeOptions="actionNext"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:text="@={createNewAccountForm.firstName}"
                            android:nextFocusRight="@id/lastName"
                            android:textSize="@dimen/_13ssp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/lastName"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintHorizontal_chainStyle="spread_inside"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">
                            <requestFocus/>
                        </EditText>

                        <EditText
                            android:id="@+id/lastName"
                            android:layout_width="@dimen/_130sdp"
                            android:layout_height="50dp"
                            android:autofillHints="phone"
                            android:background="@drawable/login_editext_background"
                            android:hint="@string/create_account_last_name"
                            android:inputType="textNoSuggestions"
                            android:paddingStart="@dimen/_7sdp"
                            android:paddingEnd="@dimen/_7sdp"
                            android:singleLine="true"
                            android:text="@={createNewAccountForm.lastName}"
                            android:textSize="@dimen/_13ssp"
                            app:layout_constraintBottom_toBottomOf="@+id/firstName"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:nextFocusForward="@id/createPassword"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toEndOf="@+id/firstName"
                            app:layout_constraintTop_toTopOf="@+id/firstName">
                        </EditText>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:layout_marginVertical="@dimen/_15sdp"
                        android:focusable="false"
                        >
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:hint="@string/login_username_hint"
                            android:paddingStart="@dimen/_7sdp"
                            android:paddingEnd="@dimen/_7sdp"
                            android:background="@drawable/login_editext_background"
                            android:textSize="@dimen/_13ssp"
                            android:id="@+id/createAccountPhoneAndEmail"
                            android:singleLine="true"
                            android:inputType="none"
                            android:enabled="false"
                            android:focusable="false"
                            android:autofillHints=""
                            android:text="@{createNewAccountForm.phoneOrEmail}"
                            tools:ignore="TextFields" />
                    </RelativeLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_20sdp"
                        app:passwordToggleEnabled="true"
                        app:hintEnabled="false"
                        >
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:hint="@string/login_password_hint"
                            android:paddingStart="@dimen/_7sdp"
                            android:paddingEnd="@dimen/_7sdp"
                            android:background="@drawable/login_editext_background"
                            android:textSize="@dimen/_13ssp"
                            android:id="@+id/createPassword"
                            android:singleLine="true"
                            android:text="@={createNewAccountForm.createAccountPassword}"
                            android:autofillHints=""
                            android:nextFocusForward="@id/createAccountBtn"
                            android:inputType="textPassword"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/_15sdp"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:gravity="end"
                        android:layout_marginRight="@dimen/_20sdp">

                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:button="@null"
                            android:checked="@={createNewAccountForm.agree}"
                            android:drawableStart="@drawable/checkbox_selector"
                            android:drawablePadding="@dimen/_3sdp"
                            android:text="@string/agree_with_term_and_condition"
                            android:textColor="#B0B7C3"
                            android:textSize="@dimen/_13ssp" />


                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:background="@drawable/login_button_background"
                        android:text="@string/create_account"
                        android:gravity="center"
                        android:textSize="@dimen/_15ssp"
                        android:textStyle="bold"
                        android:textColor="#FFFFFF"
                        android:clickable="true"
                        android:id="@+id/createAccountBtn"
                        android:onClick="@{(v)-> createNewAccountActivity.onClick(v)}"
                        android:focusable="true" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#277CFB"
            android:visibility="invisible" />
    </FrameLayout>


</layout>